@@ -12,6 +12,7 @@
 = 1.26.1 - 2022-06-21 =
 * Add   - Display warning if non-roman character is entered in address fields.
 * Fix   - "Division by Zero" fatal error on PHP 8.
+* Tweak - Allow electronically submitted commercial invoices to be downloaded.
 
 = 1.26.0 - 2022-05-27 =
 * Add   - Tool to clear cached Tax server responses from the transients.
